ejm-poc-docker-aks/eJM.API.NM.Function.azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejm-nmapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ejm-nmapp
  template:
    metadata:
      labels:
        app: ejm-nmapp
    spec:
      containers:
        - name: ejm-container
          image: ejmacr.azurecr.io/ejmapinmfunctionservice:v1
          ports:
            - containerPort: 8501
      imagePullSecrets:
        - name: myregistry-creds
---
apiVersion: v1
kind: Service
metadata:
  name: ejm-nmapp-service
spec:
  selector:
    app: ejm-nmapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
